server client communication is am start

--- a/frontend/src/scss/ml-dialog.scss
+++ b/frontend/src/scss/ml-dialog.scss
@@ -12,6 +12,12 @@
   &.center{
     justify-content: center !important;
   }
+  &.end{
+    justify-content: end !important;
+  }
+  &.start {
+    justify-content: start !important;
+  }
 
 }
 
